# qwen3-tts-rscandle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build-cuda.bat  build-docker.sh  build-release-cuda.bat  build-release.bat  generate.ps1  package-cuda.ps1  package.ps1  ruff.toml  run.bat
${PROJECT_ROOT}/.opencode/: memory.db  memory.db-shm  memory.db-wal
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: audio.rs  e2e_bench.rs  sampling.rs  tensor_ops.rs
docs/: BENCHMARKS.md  CODE_IMPROVEMENTS.md  CONTINUATION.md  CUSTOM_CUDA_KERNELS_PLAN.md  PERFORMANCE_JOURNAL.md  PERFORMANCE_TESTING.md  PROFILING.md  PYTHON_MODULE.md  QWEN3_TTS_ARCHITECTURE.md  REFACTORING_PROMPT.md  VALIDATION.md
examples/: speaker_compare.rs  tts.rs  voice_clone_gen.rs  voice_clone_test.rs
kernels/: fused_residual_rmsnorm.cu  fused_residual_rmsnorm.ptx
scripts/: audit-gpu-syncs.sh  bench-python.py  check_tensor_dtype.py  convert_gguf_names.py  count-kernels.sh  download-models.ps1  download_test_data.sh  examine_gguf_writer.py  explore_gguf_api.py  merge_safetensors_into_gguf.py  quality_check.py  read_gguf_meta.py  test-kernel.sh  test-variants.py  test-variants.sh  transcribe.py
src/: i18n.rs  lib.rs  profiling.rs
src/audio/: resample.rs
src/models/: mod.rs  talker.rs
src/models/quantized/: code_predictor.rs  mod.rs  talker.rs  transformer.rs
tests/: debug_decoder_stages.rs  integration.rs  reference_validation.rs  streaming_e2e.rs
